--- a/calendar.html
+++ b/calendar.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advanced Events Calendar – Khotwa</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.css" rel="stylesheet" />
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calendar – Khotwa</title>
+  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
     .calendar-wrapper {
-      max-width: 1000px;
-      margin: 2rem auto;
-      background-color: var(--card-bg);
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
+      max-width: 1000px; margin: 2rem auto;
+      background: var(--card-bg); padding: 1.5rem;
+      border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1);
     }
     #addEventBtn {
+      background: var(--green); color: var(--white);
+      border: none; padding: 0.6rem 1.2rem; border-radius: 6px;
+      cursor: pointer; transition: background 0.3s;
       margin-bottom: 1rem;
-      padding: 0.6rem 1.2rem;
-      background: var(--green);
-      color: var(--white);
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
     }
     #addEventBtn:hover { background: #005f35; }
 
-    /* Modal */
+    /* Modal style */
     .modal {
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.4);
-      display: none; align-items: center; justify-content: center;
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.4); display: none;
+      align-items: center; justify-content: center;
+      z-index: 999;
     }
     .modal-content {
-      background: var(--bg);
-      padding: 1.6rem;
-      border-radius: 8px;
-      max-width: 400px;
-      width: 90%;
+      background: var(--bg); padding: 1.6rem; border-radius: 8px;
+      width: 90%; max-width: 400px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
     .modal-content h3 { margin-top: 0; }
@@ -50,12 +39,13 @@
       background: var(--card-bg); color: var(--text);
     }
     .modal-content button {
-      padding: 0.7rem 1.3rem;
-      background: var(--btn-bg); color: var(--btn-text);
-      border: none; border-radius: 6px; cursor: pointer;
-      margin-right: 0.5rem;
+      padding: 0.7rem 1.3rem; margin-right: 0.5rem;
+      border: none; border-radius: 6px;
+      cursor: pointer; transition: background .3s;
     }
-    .modal-content button:hover { background: var(--green); }
+    .modal-content button.save { background: var(--btn-bg); color: var(--btn-text); }
+    .modal-content button.save:hover { background: var(--green); }
+    .modal-content button.cancel { background: #ccc; }
   </style>
 </head>
 <body>
@@ -65,30 +55,30 @@
   <nav class="nav-container">
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html" class="active">Calendar</a></li>
       <li><a href="register.html">Register</a></li>
       <li><a href="admin.html">Admin</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="profile.html">Profile</a></li>
-      <li><a href="calendar.html">Calendar</a></li>
     </ul>
+    <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
   </nav>
 </header>
 
-<section class="section calendar-wrapper" data-aos="fade-up">
+<section class="calendar-wrapper" data-aos="fade-up">
   <button id="addEventBtn">+ Add Event</button>
   <div id="calendar"></div>
 </section>
 
-<!-- Modal Dialog -->
 <div id="eventModal" class="modal">
   <div class="modal-content">
-    <h3>Add Event</h3>
-    <input type="text" id="evtTitle" placeholder="Event Title" />
-    <input type="date" id="evtDate" />
+    <h3>Add New Event</h3>
+    <input type="text" id="evtTitle" placeholder="Event Title"/>
+    <input type="date" id="evtDate"/>
     <div>
-      <button id="saveEvtBtn">Save</button>
-      <button id="cancelEvtBtn">Cancel</button>
+      <button class="save" id="saveEvtBtn">Save</button>
+      <button class="cancel" id="cancelEvtBtn">Cancel</button>
     </div>
   </div>
 </div>
@@ -102,25 +92,23 @@
 <script src="main.js"></script>
 <script>
   AOS.init({ duration: 800, once: true });
-
   document.addEventListener('DOMContentLoaded', () => {
     const modal = document.getElementById('eventModal');
+    const calEl = document.getElementById('calendar');
+    const addBtn = document.getElementById('addEventBtn');
     const saveBtn = document.getElementById('saveEvtBtn');
     const cancelBtn = document.getElementById('cancelEvtBtn');
-    const addBtn = document.getElementById('addEventBtn');
-    const calendarEl = document.getElementById('calendar');
-
-    let eventsData = [
+    let events = [
       { title: 'Orientation', start: '2025-08-10' },
       { title: 'Tech Workshop', start: '2025-08-18' }
     ];
 
-    const calendar = new FullCalendar.Calendar(calendarEl, {
+    const calendar = new FullCalendar.Calendar(calEl, {
       initialView: 'dayGridMonth',
-      events: eventsData,
+      events,
       dateClick: info => {
-        const detail = eventsData.find(e => e.start === info.dateStr);
-        if (detail) alert(detail.title);
+        const event = events.find(e => e.start === info.dateStr);
+        if (event) alert(event.title);
       }
     });
     calendar.render();
@@ -129,15 +117,14 @@
     cancelBtn.addEventListener('click', () => modal.style.display = 'none');
 
     saveBtn.addEventListener('click', () => {
-      const title = document.getElementById('evtTitle').value.trim();
-      const date = document.getElementById('evtDate').value;
-      if (!title || !date) return alert('Please add title and date');
-      eventsData.push({ title, start: date });
-      calendar.addEvent({ title, start: date });
+      const t = document.getElementById('evtTitle').value.trim();
+      const d = document.getElementById('evtDate').value;
+      if (!t || !d) return alert('Please enter title & date');
+      events.push({ title: t, start: d });
+      calendar.addEvent({ title: t, start: d });
       modal.style.display = 'none';
     });
   });
 </script>
-
 </body>
 </html>
