--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="logo">KHOTWA COUNCIL</div>
   <nav class="nav-container">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="register.html">Register</a></li>
       <li><a href="admin.html">Admin</a></li>
@@ -42,7 +42,7 @@
     <p>Khotwa bridges students and leadership. We empower, represent, connect.</p>
   </div>
   <div class="about-image">
-    <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo"/>
+    <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo" loading="lazy"/>
   </div>
 </section>
 
@@ -60,27 +60,27 @@
 <section id="events" class="section" data-aos="fade-up">
   <h2>Upcoming Events</h2>
   <ul class="event-cards">
-    <li class="card-event">
-      <img src="images/event1.jpg" alt="Orientation"/>
+    <li class="card-event" data-aos="fade-up" data-aos-delay="100">
+      <img src="images/event1.jpg" alt="Orientation" loading="lazy"/>
       <h3>Orientation Week</h3>
       <p>Welcome new students to the journey.</p>
     </li>
-    <li class="card-event">
-      <img src="images/event2.jpg" alt="Tech Talk"/>
+    <li class="card-event" data-aos="fade-up" data-aos-delay="200">
+      <img src="images/event2.jpg" alt="Tech Talk" loading="lazy"/>
       <h3>Tech Talk</h3>
       <p>AI, Web & Innovation session.</p>
     </li>
   </ul>
 </section>
 
-<!-- Contact -->
-<section id="contact" class="section" data-aos="fade-up">
+<!-- Contact Preview -->
+<section id="contact" class="section" data-aos="fade-up" data-aos-delay="300">
   <h2>Contact Us</h2>
   <a href="contact.html" class="primary-btn">Get In Touch</a>
 </section>
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer" data-aos="fade-up" data-aos-delay="400">
   <p>© 2025 Khotwa Student Council. All rights reserved.</p>
 </footer>
 
