--- a/profile.html
+++ b/profile.html
@@ -5,23 +5,53 @@
   <title>Your Profile – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
   <style>
-    .profile-container{max-width:500px;margin:3rem auto;padding:2rem;background:var(--card-bg);border-radius:10px;box-shadow:0 2px 12px rgba(0,0,0,0.1);}
-    .profile-container h2{text-align:center;margin-bottom:1.5rem;}
-    .profile-info p{font-size:1.1rem;margin-bottom:1rem;color:var(--text);}
-    .logout-btn{display:block;margin:2rem auto 0;padding:0.8rem 2rem;border:none;background:var(--btn-bg);color:var(--btn-text);font-weight:bold;border-radius:5px;cursor:pointer;}
-    .logout-btn:hover{background:var(--green);}
+    .profile-container {
+      max-width: 500px;
+      margin: 3rem auto;
+      padding: 2rem;
+      background: var(--card-bg);
+      border-radius: 10px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
+    }
+    .profile-container h2 { text-align: center; margin-bottom: 1.5rem; }
+    .profile-info p {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+      color: var(--text);
+    }
+    .logout-btn {
+      display: block;
+      margin: 2rem auto 0;
+      padding: 0.8rem 2rem;
+      border: none;
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .logout-btn:hover {
+      background: var(--green);
+    }
   </style>
 </head>
 <body>
 <script>
-  if(localStorage.getItem('isLogged')!=='true'&&localStorage.getItem('rememberMe')!=='true'){alert('You must log in first!');location.href='login.html';}
+  if (
+    localStorage.getItem("isLogged") !== "true" &&
+    localStorage.getItem("rememberMe") !== "true"
+  ) {
+    alert("You must log in first!");
+    location.href = "login.html";
+  }
 </script>
 
 <header class="navbar">
   <div class="logo">KHOTWA</div>
   <nav class="nav-container">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li><li><a href="admin.html">Admin</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admin.html">Admin</a></li>
     </ul>
     <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
@@ -40,5 +70,13 @@
 
 <footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 <script src="main.js"></script>
+<script>
+  document.getElementById("logoutBtn").addEventListener("click", function () {
+    localStorage.removeItem("isLogged");
+    localStorage.removeItem("rememberMe");
+    alert("✅ تم تسجيل الخروج بنجاح");
+    location.href = "login.html";
+  });
+</script>
 </body>
 </html>
