--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
-<header class="navbar" data-aos="fade-down">
+<header class="navbar" id="mainNavbar" data-aos="fade-down">
   <div class="logo">KHOTWA COUNCIL</div>
   <nav class="nav-container">
     <ul class="nav-links">
@@ -26,16 +25,14 @@
   </nav>
 </header>
 
-<!-- Hero -->
 <section id="home" class="hero" data-aos="fade-up">
   <div class="hero-content">
     <h1>Welcome to <span class="text-green">Khotwa</span></h1>
-    <p>Empowering student voice. Leading with impact.</p>
-    <a href="#about" class="primary-btn">Explore Khotwa</a>
+    <p>Empowering <strong>student voice</strong>. Leading with impact.</p>
+    <a href="#about" class="primary-btn" id="ctaBtn">Explore Khotwa</a>
   </div>
 </section>
 
-<!-- About -->
 <section id="about" class="section about-section" data-aos="fade-right">
   <div class="about-text">
     <h2>Who Are We?</h2>
@@ -46,7 +43,6 @@
   </div>
 </section>
 
-<!-- Stats -->
 <section class="section stats" data-aos="zoom-in">
   <h2>Our Impact</h2>
   <div class="stats-grid">
@@ -56,7 +52,6 @@
   </div>
 </section>
 
-<!-- Events -->
 <section id="events" class="section" data-aos="fade-up">
   <h2>Upcoming Events</h2>
   <ul class="event-cards">
@@ -73,23 +68,33 @@
   </ul>
 </section>
 
-<!-- Contact Preview -->
 <section id="contact" class="section" data-aos="fade-up" data-aos-delay="300">
   <h2>Contact Us</h2>
   <a href="contact.html" class="primary-btn">Get In Touch</a>
 </section>
 
-<!-- Footer -->
 <footer class="footer" data-aos="fade-up" data-aos-delay="400">
   <p>© 2025 Khotwa Student Council. All rights reserved.</p>
 </footer>
 
-<!-- Scripts -->
 <script src="main.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({ duration: 800, once: true });
-</script>
 
+  // زر CTA حركة صغيرة لجذب الانتباه
+  document.getElementById('ctaBtn').addEventListener('mouseenter', e => {
+    e.target.style.transform = 'scale(1.05)';
+  });
+  document.getElementById('ctaBtn').addEventListener('mouseleave', e => {
+    e.target.style.transform = '';
+  });
+
+  // navbar تأثير عند scroll
+  window.addEventListener('scroll', () => {
+    const nav = document.getElementById('mainNavbar');
+    nav.classList.toggle('navbar-scrolled', window.scrollY > 50);
+  });
+</script>
 </body>
 </html>
