--- a/calendar.html
+++ b/calendar.html
@@ -8,44 +8,72 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
     .calendar-wrapper {
-      max-width: 1000px; margin: 2rem auto;
-      background: var(--card-bg); padding: 1.5rem;
-      border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.1);
+      max-width: 1000px;
+      margin: 2rem auto;
+      background: var(--card-bg);
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
     }
     #addEventBtn {
-      background: var(--green); color: var(--white);
-      border: none; padding: 0.6rem 1.2rem; border-radius: 6px;
-      cursor: pointer; transition: background 0.3s;
+      background: var(--green);
+      color: var(--white);
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
+      cursor: pointer;
       margin-bottom: 1rem;
+      transition: background 0.3s ease;
     }
     #addEventBtn:hover { background: #005f35; }
 
-    /* Modal style */
     .modal {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.4); display: none;
-      align-items: center; justify-content: center;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.4);
+      display: none;
+      align-items: center;
+      justify-content: center;
       z-index: 999;
     }
     .modal-content {
-      background: var(--bg); padding: 1.6rem; border-radius: 8px;
+      background: var(--bg);
+      padding: 1.6rem;
+      border-radius: 8px;
       width: 90%; max-width: 400px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
-    .modal-content h3 { margin-top: 0; }
+    .modal-content h3 {
+      margin-top: 0;
+    }
     .modal-content input {
-      width: 100%; padding: 0.7rem; margin: 0.6rem 0;
-      border: 1px solid #ccc; border-radius: 5px;
-      background: var(--card-bg); color: var(--text);
+      width: 100%;
+      padding: 0.7rem;
+      margin: 0.6rem 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      background: var(--card-bg);
+      color: var(--text);
     }
     .modal-content button {
-      padding: 0.7rem 1.3rem; margin-right: 0.5rem;
-      border: none; border-radius: 6px;
-      cursor: pointer; transition: background .3s;
+      padding: 0.7rem 1.3rem;
+      margin-right: 0.5rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
-    .modal-content button.save { background: var(--btn-bg); color: var(--btn-text); }
-    .modal-content button.save:hover { background: var(--green); }
-    .modal-content button.cancel { background: #ccc; }
+    .modal-content .save {
+      background: var(--btn-bg);
+      color: var(--btn-text);
+    }
+    .modal-content .save:hover {
+      background: var(--green);
+    }
+    .modal-content .cancel {
+      background: #ccc;
+    }
   </style>
 </head>
 <body>
@@ -76,7 +104,7 @@
     <h3>Add New Event</h3>
     <input type="text" id="evtTitle" placeholder="Event Title"/>
     <input type="date" id="evtDate"/>
-    <div>
+    <div style="margin-top:1rem;">
       <button class="save" id="saveEvtBtn">Save</button>
       <button class="cancel" id="cancelEvtBtn">Cancel</button>
     </div>
@@ -88,27 +116,28 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script src="main.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({ duration: 800, once: true });
+
   document.addEventListener('DOMContentLoaded', () => {
     const modal = document.getElementById('eventModal');
-    const calEl = document.getElementById('calendar');
     const addBtn = document.getElementById('addEventBtn');
     const saveBtn = document.getElementById('saveEvtBtn');
     const cancelBtn = document.getElementById('cancelEvtBtn');
+    const calendarEl = document.getElementById('calendar');
     let events = [
       { title: 'Orientation', start: '2025-08-10' },
       { title: 'Tech Workshop', start: '2025-08-18' }
     ];
 
-    const calendar = new FullCalendar.Calendar(calEl, {
+    const calendar = new FullCalendar.Calendar(calendarEl, {
       initialView: 'dayGridMonth',
       events,
       dateClick: info => {
-        const event = events.find(e => e.start === info.dateStr);
-        if (event) alert(event.title);
+        const ev = events.find(e => e.start === info.dateStr);
+        if (ev) alert(`Event: ${ev.title}`);
       }
     });
     calendar.render();
@@ -119,9 +148,10 @@
     saveBtn.addEventListener('click', () => {
       const t = document.getElementById('evtTitle').value.trim();
       const d = document.getElementById('evtDate').value;
-      if (!t || !d) return alert('Please enter title & date');
-      events.push({ title: t, start: d });
-      calendar.addEvent({ title: t, start: d });
+      if (!t || !d) return alert('Please enter both title & date');
+      const newEv = { title: t, start: d };
+      events.push(newEv);
+      calendar.addEvent(newEv);
       modal.style.display = 'none';
     });
   });
